# conways-game-of-life

./: LICENSE  README.md  pyproject.toml
src/: cuda_kernels.py  game_logic.py  game_state.pkl  gui.py  main.py  utils.py
tests/: test_game.py  test_state.pkl
